--- a/src/main/resources/assets/basemetals/lang/zh_CN.lang
+++ b/src/main/resources/assets/basemetals/lang/zh_CN.lang
@@ -93,24 +93,24 @@ item.basemetals.copper_powder.name=铜粉
 item.basemetals.copper_shovel.name=铜铲
 item.basemetals.copper_sword.name=铜剑
 item.basemetals.copper_trapdoor.name=铜活版门
-item.basemetals.electrum_axe.name=电金斧
-item.basemetals.electrum_bars.name=电金栏杆
-item.basemetals.electrum_blend.name=电金粉
-item.basemetals.electrum_block.name=电金块
-item.basemetals.electrum_boots.name=电金靴子
-item.basemetals.electrum_chestplate.name=电金胸甲
-item.basemetals.electrum_crackhammer.name=电金破裂锤
-item.basemetals.electrum_door.name=电金门
-item.basemetals.electrum_helmet.name=电金头盔
-item.basemetals.electrum_hoe.name=电金锄
-item.basemetals.electrum_ingot.name=电金锭
-item.basemetals.electrum_leggings.name=电金护腿
-item.basemetals.electrum_nugget.name=电金粒
-item.basemetals.electrum_pickaxe.name=电金稿
-item.basemetals.electrum_powder.name=电金粉
-item.basemetals.electrum_shovel.name=电金铲
-item.basemetals.electrum_sword.name=电金剑
-item.basemetals.electrum_trapdoor.name=电金活版门
+item.basemetals.electrum_axe.name=琥珀金斧
+item.basemetals.electrum_bars.name=琥珀金栏杆
+item.basemetals.electrum_blend.name=琥珀金粉
+item.basemetals.electrum_block.name=琥珀金块
+item.basemetals.electrum_boots.name=琥珀金靴子
+item.basemetals.electrum_chestplate.name=琥珀金胸甲
+item.basemetals.electrum_crackhammer.name=琥珀金破裂锤
+item.basemetals.electrum_door.name=琥珀金门
+item.basemetals.electrum_helmet.name=琥珀金头盔
+item.basemetals.electrum_hoe.name=琥珀金锄
+item.basemetals.electrum_ingot.name=琥珀金锭
+item.basemetals.electrum_leggings.name=琥珀金护腿
+item.basemetals.electrum_nugget.name=琥珀金粒
+item.basemetals.electrum_pickaxe.name=琥珀金稿
+item.basemetals.electrum_powder.name=琥珀金粉
+item.basemetals.electrum_shovel.name=琥珀金铲
+item.basemetals.electrum_sword.name=琥珀金剑
+item.basemetals.electrum_trapdoor.name=琥珀金活版门
 item.basemetals.invar_axe.name=因瓦合金斧
 item.basemetals.invar_bars.name=因瓦合金栏杆
 item.basemetals.invar_blend.name=因瓦合金粉
@@ -292,10 +292,10 @@ tile.basemetals.copper_block.name=铜块
 tile.basemetals.copper_door.name=铜门
 tile.basemetals.copper_ore.name=铜矿石
 tile.basemetals.copper_trapdoor.name=铜活版门
-tile.basemetals.electrum_bars.name=电金栏杆
-tile.basemetals.electrum_block.name=电金块
-tile.basemetals.electrum_door.name=电金门
-tile.basemetals.electrum_trapdoor.name=电金活版门
+tile.basemetals.electrum_bars.name=琥珀金栏杆
+tile.basemetals.electrum_block.name=琥珀金块
+tile.basemetals.electrum_door.name=琥珀金门
+tile.basemetals.electrum_trapdoor.name=琥珀金活版门
 tile.basemetals.invar_bars.name=因瓦合金栏杆
 tile.basemetals.invar_block.name=因瓦合金块
 tile.basemetals.invar_door.name=因瓦合金门
@@ -303,8 +303,8 @@ tile.basemetals.invar_trapdoor.name=因瓦合金活版门
 tile.basemetals.lead_bars.name=铅栏杆
 tile.basemetals.lead_block.name=铅块
 tile.basemetals.lead_door.name=铅门
-tile.basemetals.lead_ore.name=铅金矿石
-tile.basemetals.lead_trapdoor.name=铅金活版门
+tile.basemetals.lead_ore.name=铅矿石
+tile.basemetals.lead_trapdoor.name=铅活版门
 tile.basemetals.mercury_ore.name=汞矿石
 tile.basemetals.mithril_bars.name=秘银栏杆
 tile.basemetals.mithril_block.name=秘银块
@@ -367,7 +367,7 @@ tile.basemetals.brass_plate.name=黄铜板
 tile.basemetals.bronze_plate.name=青铜板
 tile.basemetals.coldiron_plate.name=寒铁板
 tile.basemetals.copper_plate.name=铜板
-tile.basemetals.electrum_plate.name=电金板
+tile.basemetals.electrum_plate.name=琥珀金板
 tile.basemetals.invar_plate.name=因瓦合金板
 tile.basemetals.lead_plate.name=铅板
 tile.basemetals.mithril_plate.name=秘银板
@@ -397,7 +397,7 @@ achievement.blocktastic=金属块！
 achievement.geologist=地质学家
 achievement.brass_maker=黄铜
 achievement.bronze_maker=青铜
-achievement.electrum_maker=电金
+achievement.electrum_maker=琥珀金
 achievement.steel_maker=钢
 achievement.invar_maker=因瓦合金
 achievement.mithril_maker=秘银
@@ -413,7 +413,7 @@ achievement.blocktastic.desc=放置一个不是铁或金的金属块
 achievement.geologist.desc=制作一把破裂锤
 achievement.brass_maker.desc=混合铜粉和锌粉，并烧制黄铜
 achievement.bronze_maker.desc=混合铜粉和锡粉，并烧制青铜
-achievement.electrum_maker.desc=混合银粉和金粉，并烧制电金
+achievement.electrum_maker.desc=混合银粉和金粉，并烧制琥珀金
 achievement.steel_maker.desc=混合铁粉和炭粉，并烧制钢
 achievement.invar_maker.desc=混合铁粉和镍粉，并烧制因瓦合金
 achievement.mithril_maker.desc=混合银粉、寒铁粉和液态汞，并烧制秘银
