--- a/src/main/resources/assets/basemetals/lang/fr_CA.lang
+++ b/src/main/resources/assets/basemetals/lang/fr_CA.lang
@@ -429,3 +429,6 @@ achievement.moon_boots.desc=Portez une paire de bottes en acier-étoile
 item.basemetals.diamond_crackhammer.name=Massette en diamant
 item.basemetals.wood_crackhammer.name=Massette en bois
 item.basemetals.stone_crackhammer.name=Massette ene pierre
+
+
+item.basemetals.bucket_mercury.name=Godet de Mercure
