--- a/src/main/resources/assets/basemetals/lang/it_IT.lang
+++ b/src/main/resources/assets/basemetals/lang/it_IT.lang
@@ -435,3 +435,5 @@ achievement.moon_boots.desc=Indossare un paio di stivali star-acciaio
 item.basemetals.diamond_crackhammer.name=Mazza Diamante
 item.basemetals.wood_crackhammer.name=Mazza di Legno
 item.basemetals.stone_crackhammer.name=Mazza Stone
+
+item.basemetals.bucket_mercury.name=Secchio di Mercurio
