--- a/src/main/resources/assets/basemetals/lang/zh_CN.lang
+++ b/src/main/resources/assets/basemetals/lang/zh_CN.lang
@@ -428,3 +428,5 @@ achievement.moon_boots.desc=穿一双星钢靴
 item.basemetals.diamond_crackhammer.name=钻石破裂锤
 item.basemetals.wood_crackhammer.name=木质破裂锤
 item.basemetals.stone_crackhammer.name=石质破裂锤
+
+item.basemetals.bucket_mercury.name=汞桶
