--- a/src/main/resources/assets/basemetals/lang/en_GB.lang
+++ b/src/main/resources/assets/basemetals/lang/en_GB.lang
@@ -429,3 +429,5 @@ achievement.moon_boots.desc=Wear a pair of star-steel boots
 item.basemetals.diamond_crackhammer.name=Diamond Crack Hammer
 item.basemetals.wood_crackhammer.name=Wooden Crack Hammer
 item.basemetals.stone_crackhammer.name=Stone Crack Hammer
+
+item.basemetals.bucket_mercury.name=Bucket of Mercury
