--- a/src/main/resources/assets/basemetals/lang/es_MX.lang
+++ b/src/main/resources/assets/basemetals/lang/es_MX.lang
@@ -433,3 +433,5 @@ achievement.moon_boots.desc=Use un par de botas de estrella de acero
 item.basemetals.diamond_crackhammer.name=Almádena de Diamante
 item.basemetals.wood_crackhammer.name=Almádena de Madera
 item.basemetals.stone_crackhammer.name=Almádena de Piedra
+
+item.basemetals.bucket_mercury.name=Cubo de Mercurio
