--- a/src/main/resources/assets/basemetals/lang/zh_TW.lang
+++ b/src/main/resources/assets/basemetals/lang/zh_TW.lang
@@ -17,7 +17,7 @@ item.basemetals.adamantine_pickaxe.name=精金稿
 item.basemetals.adamantine_powder.name=精金粉
 item.basemetals.adamantine_shovel.name=精金鏟
 item.basemetals.adamantine_sword.name=精金劍
-item.basemetals.adamantine_trapdoor.name=精金陷阱門
+item.basemetals.adamantine_trapdoor.name=精金地板門
 item.basemetals.aquarium_axe.name=海洋合金斧
 item.basemetals.aquarium_bars.name=海洋合金欄杆
 item.basemetals.aquarium_blend.name=海洋合金粉
@@ -36,7 +36,7 @@ item.basemetals.aquarium_pickaxe.name=海洋合金稿
 item.basemetals.aquarium_powder.name=海洋合金粉
 item.basemetals.aquarium_shovel.name=海洋合金鏟
 item.basemetals.aquarium_sword.name=海洋合金劍
-item.basemetals.aquarium_trapdoor.name=海洋合金陷阱門
+item.basemetals.aquarium_trapdoor.name=海洋合金地板門
 item.basemetals.brass_axe.name=黃銅斧
 item.basemetals.brass_bars.name=黃銅欄杆
 item.basemetals.brass_blend.name=黃銅粉
@@ -54,7 +54,7 @@ item.basemetals.brass_pickaxe.name=黃銅稿
 item.basemetals.brass_powder.name=黃銅粉
 item.basemetals.brass_shovel.name=黃銅鏟
 item.basemetals.brass_sword.name=黃銅劍
-item.basemetals.brass_trapdoor.name=黃銅陷阱門
+item.basemetals.brass_trapdoor.name=黃銅地板門
 item.basemetals.bronze_axe.name=青銅斧
 item.basemetals.bronze_bars.name=青銅欄杆
 item.basemetals.bronze_blend.name=青銅粉
@@ -72,7 +72,7 @@ item.basemetals.bronze_pickaxe.name=青銅稿
 item.basemetals.bronze_powder.name=青銅粉
 item.basemetals.bronze_shovel.name=青銅鏟
 item.basemetals.bronze_sword.name=青銅劍
-item.basemetals.bronze_trapdoor.name=青銅陷阱門
+item.basemetals.bronze_trapdoor.name=青銅地板門
 item.basemetals.carbon_powder.name=碳粉
 item.basemetals.coldiron_axe.name=寒鐵斧
 item.basemetals.coldiron_bars.name=寒鐵欄杆
@@ -91,7 +91,7 @@ item.basemetals.coldiron_pickaxe.name=寒鐵稿
 item.basemetals.coldiron_powder.name=寒鐵粉
 item.basemetals.coldiron_shovel.name=寒鐵鏟
 item.basemetals.coldiron_sword.name=寒鐵劍
-item.basemetals.coldiron_trapdoor.name=寒鐵陷阱門
+item.basemetals.coldiron_trapdoor.name=寒鐵地板門
 item.basemetals.copper_axe.name=銅斧
 item.basemetals.copper_bars.name=銅欄杆
 item.basemetals.copper_block.name=銅磚
@@ -109,7 +109,7 @@ item.basemetals.copper_pickaxe.name=銅稿
 item.basemetals.copper_powder.name=銅粉
 item.basemetals.copper_shovel.name=銅鏟
 item.basemetals.copper_sword.name=銅劍
-item.basemetals.copper_trapdoor.name=銅陷阱門
+item.basemetals.copper_trapdoor.name=銅地板門
 item.basemetals.electrum_axe.name=琥珀金斧
 item.basemetals.electrum_bars.name=琥珀金欄杆
 item.basemetals.electrum_blend.name=琥珀金粉
@@ -127,7 +127,7 @@ item.basemetals.electrum_pickaxe.name=琥珀金稿
 item.basemetals.electrum_powder.name=琥珀金粉
 item.basemetals.electrum_shovel.name=琥珀金鏟
 item.basemetals.electrum_sword.name=琥珀金劍
-item.basemetals.electrum_trapdoor.name=琥珀金陷阱門
+item.basemetals.electrum_trapdoor.name=琥珀金地板門
 item.basemetals.invar_axe.name=殷鋼斧
 item.basemetals.invar_bars.name=殷鋼欄杆
 item.basemetals.invar_blend.name=殷鋼粉
@@ -145,7 +145,7 @@ item.basemetals.invar_pickaxe.name=殷鋼稿
 item.basemetals.invar_powder.name=殷鋼粉
 item.basemetals.invar_shovel.name=殷鋼鏟
 item.basemetals.invar_sword.name=殷鋼劍
-item.basemetals.invar_trapdoor.name=殷鋼陷阱門
+item.basemetals.invar_trapdoor.name=殷鋼地板門
 item.basemetals.iron_crackhammer.name=鐵破裂錘
 item.basemetals.iron_powder.name=鐵粉
 item.basemetals.iron_nugget.name=鐵粒
@@ -167,7 +167,7 @@ item.basemetals.lead_pickaxe.name=鉛稿
 item.basemetals.lead_powder.name=鉛粉
 item.basemetals.lead_shovel.name=鉛鏟
 item.basemetals.lead_sword.name=鉛劍
-item.basemetals.lead_trapdoor.name=鉛陷阱門
+item.basemetals.lead_trapdoor.name=鉛地板門
 item.basemetals.mercury_ingot.name=液態汞
 item.basemetals.mercury_ore.name=汞礦石
 item.basemetals.mercury_powder.name=汞粉
@@ -188,7 +188,7 @@ item.basemetals.mithril_pickaxe.name=秘銀稿
 item.basemetals.mithril_powder.name=秘銀粉
 item.basemetals.mithril_shovel.name=秘銀鏟
 item.basemetals.mithril_sword.name=秘銀劍
-item.basemetals.mithril_trapdoor.name=秘銀陷阱門
+item.basemetals.mithril_trapdoor.name=秘銀地板門
 item.basemetals.nickel_axe.name=鎳斧
 item.basemetals.nickel_bars.name=鎳欄杆
 item.basemetals.nickel_block.name=鎳磚
@@ -206,7 +206,7 @@ item.basemetals.nickel_pickaxe.name=鎳稿
 item.basemetals.nickel_powder.name=鎳粉
 item.basemetals.nickel_shovel.name=鎳鏟
 item.basemetals.nickel_sword.name=鎳劍
-item.basemetals.nickel_trapdoor.name=鎳陷阱門
+item.basemetals.nickel_trapdoor.name=鎳地板門
 item.basemetals.silver_axe.name=銀斧
 item.basemetals.silver_bars.name=銀欄杆
 item.basemetals.silver_block.name=銀磚
@@ -224,7 +224,7 @@ item.basemetals.silver_pickaxe.name=銀稿
 item.basemetals.silver_powder.name=銀粉
 item.basemetals.silver_shovel.name=銀鏟
 item.basemetals.silver_sword.name=銀劍
-item.basemetals.silver_trapdoor.name=銀陷阱門
+item.basemetals.silver_trapdoor.name=銀地板門
 item.basemetals.starsteel_axe.name=星鋼斧
 item.basemetals.starsteel_bars.name=星鋼欄杆
 item.basemetals.starsteel_block.name=星鋼磚
@@ -242,7 +242,7 @@ item.basemetals.starsteel_pickaxe.name=星鋼稿
 item.basemetals.starsteel_powder.name=星鋼粉
 item.basemetals.starsteel_shovel.name=星鋼鏟
 item.basemetals.starsteel_sword.name=星鋼劍
-item.basemetals.starsteel_trapdoor.name=星鋼陷阱門
+item.basemetals.starsteel_trapdoor.name=星鋼地板門
 item.basemetals.steel_axe.name=鋼斧
 item.basemetals.steel_bars.name=鋼欄杆
 item.basemetals.steel_blend.name=鋼粉
@@ -260,7 +260,7 @@ item.basemetals.steel_pickaxe.name=鋼稿
 item.basemetals.steel_powder.name=鋼粉
 item.basemetals.steel_shovel.name=鋼鏟
 item.basemetals.steel_sword.name=鋼劍
-item.basemetals.steel_trapdoor.name=鋼陷阱門
+item.basemetals.steel_trapdoor.name=鋼地板門
 item.basemetals.stone_crackhammer.name=鋼破裂錘
 item.basemetals.tin_axe.name=錫斧
 item.basemetals.tin_bars.name=錫欄杆
@@ -279,7 +279,7 @@ item.basemetals.tin_pickaxe.name=錫稿
 item.basemetals.tin_powder.name=錫粉
 item.basemetals.tin_shovel.name=錫鏟
 item.basemetals.tin_sword.name=錫劍
-item.basemetals.tin_trapdoor.name=錫陷阱門
+item.basemetals.tin_trapdoor.name=錫地板門
 item.basemetals.zinc_block.name=鋅磚
 item.basemetals.zinc_ingot.name=鋅錠
 item.basemetals.zinc_nugget.name=鋅粒
@@ -290,71 +290,71 @@ tile.basemetals.adamantine_bars.name=精金欄杆
 tile.basemetals.adamantine_block.name=精金磚
 tile.basemetals.adamantine_door.name=精金門
 tile.basemetals.adamantine_ore.name=精金礦石
-tile.basemetals.adamantine_trapdoor.name=精金陷阱門
+tile.basemetals.adamantine_trapdoor.name=精金地板門
 tile.basemetals.aquarium_bars.name=海洋合金欄杆
 tile.basemetals.aquarium_block.name=海洋合金磚
 tile.basemetals.aquarium_door.name=海洋合金門
-tile.basemetals.aquarium_trapdoor.name=海洋合金陷阱門
+tile.basemetals.aquarium_trapdoor.name=海洋合金地板門
 tile.basemetals.brass_bars.name=黃銅欄杆
 tile.basemetals.brass_block.name=黃銅磚
 tile.basemetals.brass_door.name=黃銅門
-tile.basemetals.brass_trapdoor.name=黃銅陷阱門
+tile.basemetals.brass_trapdoor.name=黃銅地板門
 tile.basemetals.bronze_bars.name=青銅欄杆
 tile.basemetals.bronze_block.name=青銅磚
 tile.basemetals.bronze_door.name=青銅門
-tile.basemetals.bronze_trapdoor.name=青銅陷阱門
+tile.basemetals.bronze_trapdoor.name=青銅地板門
 tile.basemetals.coldiron_bars.name=寒鐵欄杆
 tile.basemetals.coldiron_block.name=寒鐵磚
 tile.basemetals.coldiron_door.name=寒鐵門
 tile.basemetals.coldiron_ore.name=寒鐵礦石
-tile.basemetals.coldiron_trapdoor.name=寒鐵陷阱門
+tile.basemetals.coldiron_trapdoor.name=寒鐵地板門
 tile.basemetals.copper_bars.name=銅欄杆
 tile.basemetals.copper_block.name=銅磚
 tile.basemetals.copper_door.name=銅門
 tile.basemetals.copper_ore.name=銅礦石
-tile.basemetals.copper_trapdoor.name=銅陷阱門
+tile.basemetals.copper_trapdoor.name=銅地板門
 tile.basemetals.electrum_bars.name=琥珀金欄杆
 tile.basemetals.electrum_block.name=琥珀金磚
 tile.basemetals.electrum_door.name=琥珀金門
-tile.basemetals.electrum_trapdoor.name=琥珀金陷阱門
+tile.basemetals.electrum_trapdoor.name=琥珀金地板門
 tile.basemetals.invar_bars.name=殷鋼欄杆
 tile.basemetals.invar_block.name=殷鋼磚
 tile.basemetals.invar_door.name=殷鋼門
-tile.basemetals.invar_trapdoor.name=殷鋼陷阱門
+tile.basemetals.invar_trapdoor.name=殷鋼地板門
 tile.basemetals.lead_bars.name=鉛欄杆
 tile.basemetals.lead_block.name=鉛磚
 tile.basemetals.lead_door.name=鉛門
 tile.basemetals.lead_ore.name=鉛礦石
-tile.basemetals.lead_trapdoor.name=鉛陷阱門
+tile.basemetals.lead_trapdoor.name=鉛地板門
 tile.basemetals.mercury_ore.name=汞礦石
 tile.basemetals.mithril_bars.name=秘銀欄杆
 tile.basemetals.mithril_block.name=秘銀磚
 tile.basemetals.mithril_door.name=秘銀門
-tile.basemetals.mithril_trapdoor.name=秘銀陷阱門
+tile.basemetals.mithril_trapdoor.name=秘銀地板門
 tile.basemetals.nickel_bars.name=鎳欄杆
 tile.basemetals.nickel_block.name=鎳磚
 tile.basemetals.nickel_door.name=鎳門
 tile.basemetals.nickel_ore.name=鎳礦石
-tile.basemetals.nickel_trapdoor.name=鎳陷阱門
+tile.basemetals.nickel_trapdoor.name=鎳地板門
 tile.basemetals.silver_bars.name=銀欄杆
 tile.basemetals.silver_block.name=銀磚
 tile.basemetals.silver_door.name=銀門
 tile.basemetals.silver_ore.name=銀礦石
-tile.basemetals.silver_trapdoor.name=銀陷阱門
+tile.basemetals.silver_trapdoor.name=銀地板門
 tile.basemetals.starsteel_bars.name=星鋼欄杆
 tile.basemetals.starsteel_block.name=星鋼磚
 tile.basemetals.starsteel_door.name=星鋼門
 tile.basemetals.starsteel_ore.name=星鋼礦石
-tile.basemetals.starsteel_trapdoor.name=星鋼陷阱門
+tile.basemetals.starsteel_trapdoor.name=星鋼地板門
 tile.basemetals.steel_bars.name=鋼欄杆
 tile.basemetals.steel_block.name=鋼磚
 tile.basemetals.steel_door.name=鋼門
-tile.basemetals.steel_trapdoor.name=鋼陷阱門
+tile.basemetals.steel_trapdoor.name=鋼地板門
 tile.basemetals.tin_bars.name=錫欄杆
 tile.basemetals.tin_block.name=錫磚
 tile.basemetals.tin_door.name=錫門
 tile.basemetals.tin_ore.name=錫礦石
-tile.basemetals.tin_trapdoor.name=錫陷阱門
+tile.basemetals.tin_trapdoor.name=錫地板門
 tile.basemetals.zinc_block.name=鋅磚
 tile.basemetals.zinc_ore.name=鋅礦石
 
