--- a/src/main/resources/assets/basemetals/lang/fr_CA.lang
+++ b/src/main/resources/assets/basemetals/lang/fr_CA.lang
@@ -1,5 +1,8 @@
 nei.basemetals.recipehandler.crusher.name=Blocs/éléments broyés
 
+itemGroup.basemetals.items=Base Metals
+itemGroup.basemetals.tools=Base Metals
+itemGroup.basemetals.blocks=Base Metals
 item.basemetals.adamantine_axe.name=Hache en adamantin
 item.basemetals.adamantine_bars.name=Barres en adamantin
 item.basemetals.adamantine_block.name=Bloc d'adamantin
