--- a/src/main/resources/assets/basemetals/lang/zh_CN.lang
+++ b/src/main/resources/assets/basemetals/lang/zh_CN.lang
@@ -1,5 +1,8 @@
 language_support_goals=english (en_US,en_EN,en_CA,en_GB, en_AU, en_PT), spanish (es_MX,es_ES), simplified chinese (zh_CN), portugese(pt_BR), italian(IT_it), japanese (ja_JA), portugese (pt_BR), german (de_DE)
 
+itemGroup.basemetals.items=Base Metals
+itemGroup.basemetals.tools=Base Metals
+itemGroup.basemetals.blocks=Base Metals
 nei.basemetals.recipehandler.crusher.name=粉碎
 
 item.basemetals.adamantine_axe.name=艾德曼金属斧
