fixed the armor values and successfully switched over to the new fluid container system (complete implementation of the universal bucket)

--- a/src/main/resources/assets/basemetals/lang/de_DE.lang
+++ b/src/main/resources/assets/basemetals/lang/de_DE.lang
@@ -433,4 +433,4 @@ item.basemetals.diamond_crackhammer.name=Diamantbruchhammer
 item.basemetals.wood_crackhammer.name=Holzbruchhammer
 item.basemetals.stone_crackhammer.name=Steinbruchhammer
 
-item.basemetals.bucket_mercury.name=Quecksilbereimer
+item.bucket.mercury=Quecksilbereimer
