--- a/src/main/resources/assets/basemetals/lang/it_IT.lang
+++ b/src/main/resources/assets/basemetals/lang/it_IT.lang
@@ -439,4 +439,4 @@ item.basemetals.diamond_crackhammer.name=Mazza Diamante
 item.basemetals.wood_crackhammer.name=Mazza di Legno
 item.basemetals.stone_crackhammer.name=Mazza Stone
 
-item.basemetals.bucket_mercury.name=Secchio di Mercurio
+item.bucket.mercury=Secchio di Mercurio
