--- a/src/main/resources/assets/basemetals/lang/nl_NL.lang
+++ b/src/main/resources/assets/basemetals/lang/nl_NL.lang
@@ -433,4 +433,4 @@ item.basemetals.diamond_crackhammer.name=Diamanten Breek Hamer
 item.basemetals.wood_crackhammer.name=Houten Breek Hamer
 item.basemetals.stone_crackhammer.name=Stenen Breek Hamer
 
-item.basemetals.bucket_mercury.name=Emmer met Kwik
+item.bucket.mercury=Emmer met Kwik
