--- a/src/main/resources/assets/basemetals/lang/pt_BR.lang
+++ b/src/main/resources/assets/basemetals/lang/pt_BR.lang
@@ -433,4 +433,4 @@ item.basemetals.diamond_crackhammer.name=Marreta de Diamante
 item.basemetals.wood_crackhammer.name=Marreta de Madeira
 item.basemetals.stone_crackhammer.name=Marreta de Pedra
 
-item.basemetals.bucket_mercury.name=Balde de Mercúrio
+item.bucket.mercury=Balde de Mercúrio
