--- a/src/main/resources/assets/basemetals/lang/zh_CN.lang
+++ b/src/main/resources/assets/basemetals/lang/zh_CN.lang
@@ -432,4 +432,4 @@ item.basemetals.diamond_crackhammer.name=钻石破裂锤
 item.basemetals.wood_crackhammer.name=木质破裂锤
 item.basemetals.stone_crackhammer.name=石质破裂锤
 
-item.basemetals.bucket_mercury.name=汞桶
+item.bucket.mercury=汞桶
