--- a/src/main/resources/assets/basemetals/lang/zh_TW.lang
+++ b/src/main/resources/assets/basemetals/lang/zh_TW.lang
@@ -433,5 +433,5 @@ item.basemetals.diamond_crackhammer.name=鑽石破裂錘
 item.basemetals.wood_crackhammer.name=木質破裂錘
 item.basemetals.stone_crackhammer.name=石質破裂錘
 
-item.basemetals.bucket_mercury.name=汞桶
+item.bucket.mercury=汞桶
 
