--- a/src/main/resources/assets/basemetals/lang/en_EN.lang
+++ b/src/main/resources/assets/basemetals/lang/en_EN.lang
@@ -433,4 +433,4 @@ item.basemetals.diamond_crackhammer.name=Diamond Crack Hammer
 item.basemetals.wood_crackhammer.name=Wooden Crack Hammer
 item.basemetals.stone_crackhammer.name=Stone Crack Hammer
 
-item.basemetals.bucket_mercury.name=Bucket of Mercury
+item.bucket.mercury=Bucket of Mercury
