--- a/src/main/resources/assets/basemetals/lang/en_PT.lang
+++ b/src/main/resources/assets/basemetals/lang/en_PT.lang
@@ -432,4 +432,4 @@ item.basemetals.diamond_crackhammer.name=Diamond Crack Hammer
 item.basemetals.wood_crackhammer.name=Wooden Crack Hammer
 item.basemetals.stone_crackhammer.name=Stone Crack Hammer
 
-item.basemetals.bucket_mercury.name=Bucket o' Quicksilver
+item.bucket.mercury=Bucket o' Quicksilver
