--- a/src/main/resources/assets/basemetals/lang/es_MX.lang
+++ b/src/main/resources/assets/basemetals/lang/es_MX.lang
@@ -432,4 +432,4 @@ item.basemetals.diamond_crackhammer.name=Almádena de diamante
 item.basemetals.wood_crackhammer.name=Almádena de madera
 item.basemetals.stone_crackhammer.name=Almádena de piedra
 
-item.basemetals.bucket_mercury.name=Cubo de mercurio
+item.bucket.mercury=Cubo de mercurio
