--- a/src/main/resources/assets/basemetals/lang/fr_CA.lang
+++ b/src/main/resources/assets/basemetals/lang/fr_CA.lang
@@ -434,4 +434,4 @@ item.basemetals.wood_crackhammer.name=Massette en bois
 item.basemetals.stone_crackhammer.name=Massette ene pierre
 
 
-item.basemetals.bucket_mercury.name=Godet de Mercure
+item.bucket.mercury=Godet de Mercure
