--- a/src/main/resources/assets/basemetals/lang/en_US.lang
+++ b/src/main/resources/assets/basemetals/lang/en_US.lang
@@ -113,6 +113,24 @@ item.basemetals.copper_powder.name=Powdered Copper
 item.basemetals.copper_shovel.name=Copper Shovel
 item.basemetals.copper_sword.name=Copper Sword
 item.basemetals.copper_trapdoor.name=Copper Trapdoor
+item.basemetals.cupronickel_axe.name=Cupronickel Axe
+item.basemetals.cupronickel_bars.name=Cupronickel Bars
+item.basemetals.cupronickel_blend.name=Cupronickel Blend
+item.basemetals.cupronickel_block.name=Cupronickel Block
+item.basemetals.cupronickel_boots.name=Cupronickel Boots
+item.basemetals.cupronickel_chestplate.name=Cupronickel Chestplate
+item.basemetals.cupronickel_crackhammer.name=Cupronickel Crack Hammer
+item.basemetals.cupronickel_door.name=Cupronickel Door
+item.basemetals.cupronickel_helmet.name=Cupronickel Helmet
+item.basemetals.cupronickel_hoe.name=Cupronickel Hoe
+item.basemetals.cupronickel_ingot.name=Cupronickel Ingot
+item.basemetals.cupronickel_leggings.name=Cupronickel Leg Armor
+item.basemetals.cupronickel_nugget.name=Cupronickel Nugget
+item.basemetals.cupronickel_pickaxe.name=Cupronickel Pickaxe
+item.basemetals.cupronickel_powder.name=Powdered Cupronickel
+item.basemetals.cupronickel_shovel.name=Cupronickel Shovel
+item.basemetals.cupronickel_sword.name=Cupronickel Sword
+item.basemetals.cupronickel_trapdoor.name=Cupronickel Trapdoor
 item.basemetals.electrum_axe.name=Electrum Axe
 item.basemetals.electrum_bars.name=Electrum Bars
 item.basemetals.electrum_blend.name=Electrum Blend
@@ -210,6 +228,24 @@ item.basemetals.nickel_powder.name=Powdered Nickel
 item.basemetals.nickel_shovel.name=Nickel Shovel
 item.basemetals.nickel_sword.name=Nickel Sword
 item.basemetals.nickel_trapdoor.name=Nickel Trapdoor
+item.basemetals.platinum_axe.name=Platinum Axe
+item.basemetals.platinum_bars.name=Platinum Bars
+item.basemetals.platinum_block.name=Platinum Block
+item.basemetals.platinum_boots.name=Platinum Boots
+item.basemetals.platinum_chestplate.name=Platinum Chestplate
+item.basemetals.platinum_crackhammer.name=Platinum Crack Hammer
+item.basemetals.platinum_door.name=Platinum Door
+item.basemetals.platinum_helmet.name=Platinum Helmet
+item.basemetals.platinum_hoe.name=Platinum Hoe
+item.basemetals.platinum_ingot.name=Platinum Ingot
+item.basemetals.platinum_leggings.name=Platinum Leg Armor
+item.basemetals.platinum_nugget.name=Platinum Nugget
+item.basemetals.platinum_ore.name=Platinum Ore
+item.basemetals.platinum_pickaxe.name=Platinum Pickaxe
+item.basemetals.platinum_powder.name=Powdered Platinum
+item.basemetals.platinum_shovel.name=Platinum Shovel
+item.basemetals.platinum_sword.name=Platinum Sword
+item.basemetals.platinum_trapdoor.name=Platinum Trapdoor
 item.basemetals.silver_axe.name=Silver Axe
 item.basemetals.silver_bars.name=Silver Bars
 item.basemetals.silver_block.name=Silver Block
@@ -316,6 +352,10 @@ tile.basemetals.copper_block.name=Copper Block
 tile.basemetals.copper_door.name=Copper Door
 tile.basemetals.copper_ore.name=Copper Ore
 tile.basemetals.copper_trapdoor.name=Copper Trapdoor
+tile.basemetals.cupronickel_bars.name=Cupronickel Bars
+tile.basemetals.cupronickel_block.name=Cupronickel Block
+tile.basemetals.cupronickel_door.name=Cupronickel Door
+tile.basemetals.cupronickel_trapdoor.name=Cupronickel Trapdoor
 tile.basemetals.electrum_bars.name=Electrum Bars
 tile.basemetals.electrum_block.name=Electrum Block
 tile.basemetals.electrum_door.name=Electrum Door
@@ -339,6 +379,11 @@ tile.basemetals.nickel_block.name=Nickel Block
 tile.basemetals.nickel_door.name=Nickel Door
 tile.basemetals.nickel_ore.name=Nickel Ore
 tile.basemetals.nickel_trapdoor.name=Nickel Trapdoor
+tile.basemetals.platinum_bars.name=Platinum Bars
+tile.basemetals.platinum_block.name=Platinum Block
+tile.basemetals.platinum_door.name=Platinum Door
+tile.basemetals.platinum_ore.name=Platinum Ore
+tile.basemetals.platinum_trapdoor.name=Platinum Trapdoor
 tile.basemetals.silver_bars.name=Silver Bars
 tile.basemetals.silver_block.name=Silver Block
 tile.basemetals.silver_door.name=Silver Door
@@ -368,11 +413,13 @@ tile.basemetals.brass_plate.name=Brass Plate
 tile.basemetals.bronze_plate.name=Bronze Plate
 tile.basemetals.coldiron_plate.name=Cold-Iron Plate
 tile.basemetals.copper_plate.name=Copper Plate
+tile.basemetals.cupronickel_plate.name=Cupronickel Plate
 tile.basemetals.electrum_plate.name=Electrum Plate
 tile.basemetals.invar_plate.name=Invar Plate
 tile.basemetals.lead_plate.name=Lead Plate
 tile.basemetals.mithril_plate.name=Mithril Plate
 tile.basemetals.nickel_plate.name=Nickel Plate
+tile.basemetals.platinum_plate.name=Platinum Plate
 tile.basemetals.silver_plate.name=Silver Plate
 tile.basemetals.starsteel_plate.name=Star-Steel Plate
 tile.basemetals.steel_plate.name=Steel Plate
@@ -400,6 +447,7 @@ achievement.blocktastic=Blocktastic!
 achievement.geologist=Geologist
 achievement.brass_maker=Brass
 achievement.bronze_maker=Bronze
+achievement.cupronickel_maker=Cupronickel
 achievement.electrum_maker=Electrum
 achievement.steel_maker=Steel
 achievement.invar_maker=Invar
@@ -416,6 +464,7 @@ achievement.blocktastic.desc=Place a metal block that is neither iron nor gold
 achievement.geologist.desc=Make a hammer from a metal block
 achievement.brass_maker.desc=Combine powdered copper and zinc to make brass
 achievement.bronze_maker.desc=Combine powdered copper and tin to make bronze
+achievement.cupronickel_maker.desc=Combine powdered copper and nickel to make cupronickel
 achievement.electrum_maker.desc=Combine powdered silver and gold to make electrum
 achievement.steel_maker.desc=Combine powdered iron and charcoal to make steel
 achievement.invar_maker.desc=Combine powdered iron and nickel to make invar
