working on adding gears and rods, as well as integrating platinum and cupronickel from pull request (needs language translations)

--- a/src/main/resources/assets/basemetals/lang/en_US.lang
+++ b/src/main/resources/assets/basemetals/lang/en_US.lang
@@ -483,3 +483,5 @@ item.basemetals.wood_crackhammer.name=Wooden Crack Hammer
 item.basemetals.stone_crackhammer.name=Stone Crack Hammer
 
 item.bucket.mercury=Bucket of Mercury
+
+item.basemetals.human_detector.name=Security Pressure Plate
